unpackaged/main/default/objects/Certificate_Extension_Request__c/Certificate_Extension_Request__c.object-meta.xml
<CustomObject>
    <label>Certificate Extension Request</label>
    <nameField>
        <displayFormat>CER{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificate Extension Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>