unpackaged/main/default/objects/Certificate_Extension_Request__c/fields/Extension_Request_Comment__c.field-meta.xml
<CustomField>
    <fullName>Extension_Request_Comment__c</fullName>
    <label>Extension Request Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>