unpackaged/main/default/objects/Certificate_Extension_Request__c/fields/Requested_Membership_Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Membership_Extension_Date__c</fullName>
    <label>Requested Membership Extension Date</label>
    <type>Date</type>
</CustomField>