unpackaged/main/default/objects/Certificate_Extension_Request__c/validationRules/Extension_Date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Extension_Date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Requested_Membership_Extension_Date__c  &lt;=  Account__r.Membership_Expiry_Date__c</errorConditionFormula>
    <errorDisplayField>Requested_Membership_Extension_Date__c</errorDisplayField>
    <errorMessage>Requested Membership Extension Date cannot be prior to the current Membership Expiry Date.</errorMessage>
</ValidationRule>